shifting style toward that of /html/ making sure the "green" headings don't appear in wrong places in results page, to avoid confusion

--- a/htdocs/style/base.css
+++ b/htdocs/style/base.css
@@ -5,7 +5,7 @@
    Copyright 2000~2007 W3C (MIT, INRIA, Keio). All Rights Reserved.
    See http://www.w3.org/Consortium/Legal/ipr-notice.html#Copyright
 
-   $Id: base.css,v 1.6 2007-03-26 01:13:20 ot Exp $
+   $Id: base.css,v 1.7 2007-03-26 01:46:29 ot Exp $
 */
 
 /*                 
@@ -91,8 +91,8 @@ h1 {
 }
 
 h2 { 
-    color: #777742;
-    background: white;
+    color: #690;
+    background-color: white;
     padding: 5px 15px;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -103,8 +103,8 @@ h2 {
 }
 
 h3 {
-    background-color: #fff;
-    color: #777742;
+    color: #690;
+    background-color: white;
     font-size: 1.1em;
     padding: 2px 10px;
     border-bottom: 1px dotted #aaaa77;
@@ -113,7 +113,7 @@ h3 {
 } 
 
 h4 {
-    color: #777742;
+    color: #690;
     background-color: white;
     font-weight: 600;
     font-style: italic;
@@ -124,8 +124,8 @@ h4 {
 }
 
 h5,h6 {
-    background-color: white;
     color: #11111A;
+    background-color: white;
     font-family: "Gill Sans", sans-serif;
     font-weight: normal;
     padding-left: 15px;
